feat(film): enrich films with director data & refine data retrieval (add-director)
Integrate director data into FilmDto responses, ensuring film details
consistently include associated director information. This completes the
display of director information for retrieved films.

Key changes:
- Enrich Film objects with director data when retrieving single films
  and collections of films in FilmService.
- Introduce DirectorExtractor and LikeExtractor for efficient batch
  loading of directors and likes for multiple films.
- Extend DirectorRepository to include methods for retrieving directors
  by film ID and for collections of films.
- Remove redundant @PastOrPresent validation from
  FilmUpdateRequest.releaseDate.
- Add error handling for HttpMessageNotReadableException to gracefully
  manage missing request bodies.
- Add Lombok annotations (@AllArgsConstructor, @NoArgsConstructor) to
  the Director model for improved code conciseness.